--- a/cryptocurrency/src/App.css
+++ b/cryptocurrency/src/App.css
@@ -38,8 +38,8 @@ a:hover{
 .nav-container{
     position: fixed;
     left: 0;
-    margin: 10px;
     height: 100vh;
+    width: 24%;
     margin: 0px;
     background-color: rgb(0, 21, 41);
 }
@@ -49,7 +49,8 @@ a:hover{
     display: flex;
     padding: 20px;
     align-items: center;
-    width: 100%;
+    flex-direction: column;
+    /*width: 100%;*/
 }
 .logo{
     margin:0 0 0 15px;
