--- a/cryptocurrency/src/App.css
+++ b/cryptocurrency/src/App.css
@@ -359,8 +359,9 @@ width: 70%;
 .crypto-card-container{
     min-height: 65vh !important;
 }
-.crypto-card{
-    min-width: 250px;
+.crypto-card{ 
+    width: 100%;
+    /*min-width: 250px;*/
 }
 .crypto-card .crypto-image{
     width:35px;
