--- a/cryptocurrency/src/App.css
+++ b/cryptocurrency/src/App.css
@@ -1,10 +1,10 @@
 :root{
     --text-primary:#000;
     --bgPrimary:#fff;
-   --bgSecondary: #F9F9F9;
-   --pink: #0071bd;
-   --light-blue: #e6f7ff;
-   --border: #d9d9d9;
+    --bgSecondary: #F9F9F9;
+    --pink: #0071bd;
+    --light-blue: #e6f7ff;
+    --border: #d9d9d9;
 }
 
 * {
@@ -38,8 +38,9 @@ a:hover{
 .nav-container{
     position: fixed;
     left: 0;
+    margin: 10px;
     height: 100vh;
-    width: 24%;
+    width: 20%;
     margin: 0px;
     background-color: rgb(0, 21, 41);
 }
@@ -50,7 +51,7 @@ a:hover{
     padding: 20px;
     align-items: center;
     flex-direction: column;
-    /*width: 100%;*/
+    width: 100%;
 }
 .logo{
     margin:0 0 0 15px;
@@ -359,9 +360,8 @@ width: 70%;
 .crypto-card-container{
     min-height: 65vh !important;
 }
-.crypto-card{ 
+.crypto-card{
     width: 100%;
-    /*min-width: 250px;*/
 }
 .crypto-card .crypto-image{
     width:35px;
@@ -376,5 +376,4 @@ width: 70%;
     display: flex;
     flex-direction: column;
     padding: 20px;
-    align-items: center;
 }
